# decision_tree_builder

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
crates/impl/: Cargo.toml
crates/impl/examples/: example.rs  example2.rs  test.rs
crates/impl/src/: decision.rs  decision_eval.rs  decisions.rs  gain_rate_calculator.rs  lib.rs  playground.rs  playground2.rs  playground3.rs  token_formatter.rs  traits.rs  tree_builder.rs  utils.rs
crates/impl/src/branch_builder/: eq_macro.rs  implementations.rs  mod.rs  num_macro.rs  ord_macro.rs
crates/macro/: Cargo.toml
crates/macro/examples/: conflicting_leaves.rs  generaetd.rs  generate_decision_tree.rs  use_decision_tree.rs
crates/macro/src/: field_type.rs  lib.rs  macro_impl.rs  struct_field.rs  write_to_file.rs
examples/: example.rs  test.rs
src/: decision.rs  gain_rate_calculator.rs  lib.rs  traits.rs  tree_builder.rs  utils.rs
