[package]
name = "decision"
version = "0.0.1"
authors = ["Jakub Zawadzki <kuba.zaw@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.107"
quote = "1.0.23"
proc-macro2 = "1.0.49"
either = "1.8.1"

