#[package]
#name = "teokryt"
#version = "0.0.1"
#authors = ["Jakub Zawadzki <kuba.zaw@gmail.com>"]
#edition = "2021"
#license = "MIT"
#
## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
#[dependencies]
#nj = { path = "crates/nj", version = "0.0.1" }
#hephaistos = { path = "crates/hephaistos", version = "0.0.1" }


[workspace]
members = [
    "crates/impl",
    "crates/macro"
]
resolver = "2"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3