[package]
name = "decision_macro"
version = "0.0.1"
authors = ["Jakub Zawadzki <kuba.zaw@gmail.com>"]
edition = "2021"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.107"
quote = "1.0.23"
proc-macro2 = "1.0.49"
prettyplease = "0.1.23"
decision_impl = { path = "../impl" }
either = "1.8.1"

